refactor: Update project with corrections to prepare